fixed panel width

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             background-image: linear-gradient(skyblue,darkblue)
         }
         .wrap{
-            width: 400px;
+            width: 27%;
             margin: auto;
             height: auto;
             background-color: black;
